--- a/css/styles.css
+++ b/css/styles.css
@@ -272,12 +272,20 @@ body {
   font-size: 20px;
   line-height: 1.2;
   text-align: center;
+  margin-top: 32px;
+  margin-bottom: 0;
+  padding-left: 65px;
+  padding-right: 65px;
 }
 
 .our-team-p {
   text-align: center;
   line-height: 1.5;
   color: var(--p-contact-color);
+  margin-top: 8px;
+  padding-right: 68px;
+  margin-bottom: 0;
+  padding-left: 68px;
 }
 
 /* PORTFOLIO-STYLE */
