--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ h6,
 p,
 ul {
   margin: 0;
+  padding: 0;
 }
 img {
   max-width: 100%;
@@ -84,7 +85,7 @@ body {
 }
 
 /* HEADER */
-.page-header> .container {
+.page-header > .container {
   display: flex;
   align-items: center;
   border-bottom: 1px solid var(--header-underline-color);
@@ -124,8 +125,6 @@ body {
 .nav-menu-list {
   display: flex;
   align-items: center;
-  padding: 0;
-  margin: 0;
   color: var(--main-text-color);
 }
 .nav-menu-list .list-item + .list-item {
@@ -149,7 +148,6 @@ body {
   display: flex;
   align-items: center;
   text-align: justify;
-  margin: 0;
   font-weight: 400;
 }
 .address-menu-list .list-item:first-child {
@@ -207,9 +205,6 @@ body {
 
 .values-list {
   display: flex;
-  margin-top: 0px;
-  padding-left: 0px;
-  margin-bottom: 0;
 }
 
 .values-list > .list-item {
@@ -221,18 +216,14 @@ body {
 /* DOING-SECTION */
 .title-studio {
   display: block;
-  margin: 0;
+
   text-align: center;
-}
-.doing-section {
-  padding-top: 0;
 }
 
 .doing-list {
   margin-top: 72px;
-  margin-bottom: 0;
+
   display: flex;
-  padding-left: 0;
 }
 .doing-list > .list-item {
   flex-basis: calc(100% / 3);
@@ -251,8 +242,6 @@ body {
 .our-team-list {
   display: flex;
   margin-top: 72px;
-  margin-bottom: 0;
-  padding-left: 0;
 }
 .our-team-list > .list-item {
   flex-basis: calc(100% / 4);
@@ -268,6 +257,7 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  margin-bottom: 8px;
 }
 
 .title-studio {
@@ -292,7 +282,6 @@ body {
   text-align: center;
   line-height: 1.5;
   color: var(--p-contact-color);
- 
 }
 
 /* PORTFOLIO-STYLE */
@@ -333,16 +322,14 @@ body {
 .our-works-list {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 0;
+
   margin-top: 72px;
-  margin-bottom: 0;
 }
 
 .h2-portfolio {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  margin: 0;
 }
 
 .our-works-list > .list-item {
@@ -363,7 +350,6 @@ body {
 .p-worklist {
   color: var(--p-contact-color);
   line-height: 1.5;
-  margin: 0;
   margin-top: 8px;
 }
 
